Basic set up with TS/JS

--- a/index.html
+++ b/index.html
@@ -31,12 +31,19 @@
 			</div>
 		</div>
 		<div class="container">
-			<div class="row" id="divMain">
+			<div class="row">
 				<div class="col-md-6">
+					<h5>Source Code</h5>
+					<textarea id="taSourceCode" cols="40" rows="18"></textarea>
+				</div>
+				<div class="col-md-6">
+					<h5>Output</h5>
+					<textarea id="taOutput" cols="40" rows="18"></textarea>
 				</div>
 			</div>
 		</div>
 		<div class="clear"></div>
 		<p class="footerText clear">Copyright &copy; 2014.</p>
 	</body>
+	<script type="text/javascript" src="scripts/include.js"></script>
 </html>
