--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 			<div class="row">
 				<div class="col-md-6">
 					<h5>Source Code</h5>
-					<textarea id="taSourceCode" cols="40" rows="18"></textarea>
+					<textarea id="taSourceCode" class="col-xs-12" rows="18"></textarea>
 				</div>
 				<div class="col-md-6">
 					<h5>Output</h5>
-					<textarea id="taOutput" cols="40" rows="18"></textarea>
+					<textarea id="taOutput" class="col-xs-12" rows="18"></textarea>
 				</div>
 			</div>
 		</div>
