Add some base classes for logger and token

--- a/index.html
+++ b/index.html
@@ -46,4 +46,5 @@
 		<p class="footerText clear">Copyright &copy; 2014.</p>
 	</body>
 	<script type="text/javascript" src="scripts/include.js"></script>
+	<script type="text/javascript" src="scripts/logger.js"></script>
 </html>
