Add Lexer barebones class

--- a/index.html
+++ b/index.html
@@ -47,4 +47,6 @@
 	</body>
 	<script type="text/javascript" src="scripts/include.js"></script>
 	<script type="text/javascript" src="scripts/logger.js"></script>
+	<script type="text/javascript" src="scripts/lexer.js"></script>
+	<script type="text/javascript" src="scripts/token.js"></script>
 </html>
