Add a clear output button

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				<div class="col-md-6">
 					<div class="row">
 						<div class="col-md-6">
-							<h5>Output</h5>
+							<h5>Output <button class="btn btn-sm btn-info" id="clear-log-button">Clear Log</button></h5>
 						</div>
 						<div class="col-md-6">
 							<div class="pull-right">
