Add support for multiple logger personalities

--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
 									<option value="label-info">Info</option>
 									<option value="label-danger">Error</option>
 								</select>
+								<label for="log-personality">Log personality:</label>
+								<select id="log-personality">
+									<option value="standard">Standard</option>
+									<option value="sarcastic">Sarcastic</option>
+								</select>
 							</div>
 						</div>
 					</div>
