Add barebones parser files

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 									<option value="-">Show All</option>
 									<option value="info">Compiler Info</option>
 									<option value="lex">Lexer</option>
+									<option value="parser">Parser</option>
 								</select>
 								<label for="log-filter-status">Filter by status:</label>
 								<select id="log-filter-status">
@@ -101,4 +102,5 @@
 	<script type="text/javascript" src="scripts/logger.js"></script>
 	<script type="text/javascript" src="scripts/lexer.js"></script>
 	<script type="text/javascript" src="scripts/token.js"></script>
+	<script type="text/javascript" src="scripts/parser.js"></script>
 </html>
