--- a/index.html
+++ b/index.html
@@ -103,4 +103,5 @@
 	<script type="text/javascript" src="scripts/lexer.js"></script>
 	<script type="text/javascript" src="scripts/token.js"></script>
 	<script type="text/javascript" src="scripts/parser.js"></script>
+	<script type="text/javascript" src="scripts/scope.js"></script>
 </html>
