Refactoring of symbol table and scope. Make a ScopeNode class

--- a/index.html
+++ b/index.html
@@ -104,4 +104,5 @@
 	<script type="text/javascript" src="scripts/token.js"></script>
 	<script type="text/javascript" src="scripts/parser.js"></script>
 	<script type="text/javascript" src="scripts/scope.js"></script>
+	<script type="text/javascript" src="scripts/scope_node.js"></script>
 </html>
