Rename output to log as it should be

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				<div class="col-md-12">
 					<div class="row">
 						<div class="col-md-4">
-							<h5>Output <button class="btn btn-sm btn-info" id="clear-log-button">Clear Log</button></h5>
+							<h5>Log <button class="btn btn-sm btn-info" id="clear-log-button">Clear Log</button></h5>
 						</div>
 						<div class="col-md-8">
 							<div class="pull-right">
