--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
 								<td><div class="btn btn-sm btn-info user-program" data-program="{&#10;    int a&#10;    int b&#10;    int c&#10;    a = 1&#10;    b = 1&#10;    c = 1&#10;    while ( a == 1 ) {&#10;        print ( b )&#10;        if ( c == 2 ) {&#10;            a = 2&#10;        }&#10;        if ( b == 2 ) {&#10;            b = 3&#10;            c = 2&#10;        }&#10;        if ( b == 1 ) {&#10;            b = 2&#10;        }&#10;    }&#10;} $">Program 3</div></td>
 								<td>While/Print/If</td>
 							</tr>
+							<tr>
+								<td><div class="btn btn-sm btn-info user-program" data-program="{&#10;    int a&#10;    a = 6&#10;    if ( a == 2 + 4 ) {&#10;        print ( a )&#10;    }&#10;    if ( 5 + 4 == 7 + 2 ) {&#10;        print ( a )&#10;    }&#10;} $">Program 4</div></td>
+								<td>Complex If statements</td>
+							</tr>
 						</tbody>
 					</table>
 				</div>
