Add neckbeard log mode

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 								<select id="log-personality">
 									<option value="standard">Standard</option>
 									<option value="sarcastic">Sarcastic</option>
+									<option value="neckbeard">Neckbeard</option>
 								</select>
 							</div>
 						</div>
