--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-		<meta name="author"             content="Bob Nisco" />
+		<meta charset="utf-8">
+		<meta name="author" content="Bob Nisco" />
+		<meta name="viewport" content="width=1000, initial-scale=1.0, maximum-scale=1.0">
 		<title>ComBOBiler</title>
 
 		<link rel="stylesheet" href="styles/vendor/bootstrap.min.css" type="text/css" media="screen" />
