Fix boolean expression and add failing test case

--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
 								<td><div class="btn btn-sm btn-danger user-program" data-program="{&#10;    float pi&#10;    pi = 3.14&#10;} $">Program 2</div></td>
 								<td>Invalid Type</td>
 							</tr>
+							<tr>
+								<td><div class="btn btn-sm btn-danger user-program" data-program="{&#10;    while &quot;a&quot; {&#10;        print ( &quot;a&quot; )&#10;    }&#10;    &#10;    print ( &quot;done&quot; )&#10;} $&#10;">Program 3</div></td>
+								<td>Invalid Boolean Expression</td>
+							</tr>
 						</tbody>
 					</table>
 				</div>
