Add fail test case for invalid statement list

--- a/index.html
+++ b/index.html
@@ -127,6 +127,10 @@
 								<td><div class="btn btn-sm btn-danger user-program" data-program="{&#10;    while &quot;a&quot; {&#10;        print ( &quot;a&quot; )&#10;    }&#10;    &#10;    print ( &quot;done&quot; )&#10;} $&#10;">Program 3</div></td>
 								<td>Invalid Boolean Expression</td>
 							</tr>
+							<tr>
+								<td><div class="btn btn-sm btn-danger user-program" data-program="{&#10;    int a&#10;    a == 6&#10;} $">Program 4</div></td>
+								<td>Invalid Statement List</td>
+							</tr>
 						</tbody>
 					</table>
 				</div>
