Create a Runner class to handle the compilation process

--- a/index.html
+++ b/index.html
@@ -146,4 +146,5 @@
 	<script type="text/javascript" src="scripts/parser.js"></script>
 	<script type="text/javascript" src="scripts/scope.js"></script>
 	<script type="text/javascript" src="scripts/scope_node.js"></script>
+	<script type="text/javascript" src="scripts/runner.js"></script>
 </html>
