Added Yoda mode

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 									<option value="standard">Standard</option>
 									<option value="sarcastic">Sarcastic</option>
 									<option value="neckbeard">Neckbeard</option>
+									<option value="yoda">Yoda</option>
 								</select>
 							</div>
 						</div>
