First draft of CST, and barebones Semantic Analyzer class

--- a/index.html
+++ b/index.html
@@ -156,4 +156,6 @@
 	<script type="text/javascript" src="scripts/scope.js"></script>
 	<script type="text/javascript" src="scripts/scope_node.js"></script>
 	<script type="text/javascript" src="scripts/runner.js"></script>
+	<script type="text/javascript" src="scripts/semantic_analyzer.js"></script>
+	<script type="text/javascript" src="scripts/tree_node.js"></script>
 </html>
