--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 									<option value="info">Compiler Info</option>
 									<option value="lex">Lexer</option>
 									<option value="parser">Parser</option>
+									<option value="semantic-analyzer">Semantic Analysis</option>
 								</select>
 								<label for="log-filter-status">Filter by status:</label>
 								<select id="log-filter-status">
