Utilize Syntree and draw the example tree from the docs

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 		<link rel="stylesheet" href="styles/vendor/bootstrap.min.css" type="text/css" media="screen" />
 		<link rel="stylesheet" href="styles/vendor/flat-ui.css" type="text/css" media="screen" />
 		<link rel="stylesheet" href="styles/include.css" type="text/css" media="screen" />
+		<script type="text/javascript" src="scripts/vendor/base64.js"></script>
+		<script type="text/javascript" src="scripts/vendor/canvas2image.js"></script>
+		<script type="text/javascript" src="scripts/vendor/syntree.js"></script>
 		<script type="text/javascript" src="scripts/vendor/jquery-1.11.0.min.js"></script>
 		<script type="text/javascript" src="scripts/vendor/bootstrap.min.js"></script>
 	</head>
@@ -75,6 +78,11 @@
 						</div>
 					</div>
 					<div id="logOutput" class="col-xs-12"></div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<div id="ast-tree-graph"></div>
 				</div>
 			</div>
 			<div class="row">
