--- a/index.html
+++ b/index.html
@@ -81,8 +81,15 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6">
-					<div id="ast-tree-graph"></div>
+				<div class="col-md-12">
+					<h3>AST</h3>
+					<div id="ast-tree-graph" class="overflow tree-graph"></div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<h3>CST</h3>
+					<div id="cst-tree-graph" class="overflow tree-graph"></div>
 				</div>
 			</div>
 			<div class="row">
