--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
 								<td><div class="btn btn-sm btn-info user-program" data-program="{&#10;    int a&#10;    a = 0&#10;    string z&#10;    z = &quot;bond&quot;&#10;    while (a != 9) {&#10;        if(a != 5) {&#10;            print(&quot;bond&quot;)&#10;        }&#10;        {&#10;            a = 1 + a&#10;            string b&#10;            b = &quot;james bond&quot;&#10;            print(b)&#10;        }&#10;    }&#10;    {}&#10;    boolean c&#10;    c = true&#10;    boolean d&#10;    d = (true == (true == false))&#10;    d = (a == b)&#10;    d = (1 == a)&#10;    d = (1 != 1)&#10;    d = (&quot;string&quot; == 1)&#10;    d = (a != &quot;string&quot;)&#10;    d = (&quot;string&quot; != &quot;string&quot;)&#10;    if (d == true) {&#10;        int c&#10;        c = 1 + d&#10;        if (c == 1) {&#10;            print(&quot;ugh&quot;)&#10;        }&#10;    }&#10;    while (&quot;string&quot; == a) {&#10;        while (1 == true) {&#10;            a = 1 + &quot;string&quot;&#10;        }&#10;    }&#10;} $">Program 6</div></td>
 								<td>Everything 2</td>
 							</tr>
+							<tr>
+								<td><div class="btn btn-sm btn-info user-program" data-program="{&#10;    int a&#10;} $">Program 7</div></td>
+								<td>Unused Identifier</td>
+							</tr>
 						</tbody>
 					</table>
 				</div>
@@ -153,6 +157,14 @@
 							<tr>
 								<td><div class="btn btn-sm btn-danger user-program" data-program="{&#10;    int a&#10;    a == 6&#10;} $">Program 4</div></td>
 								<td>Invalid Statement List</td>
+							</tr>
+							<tr>
+								<td><div class="btn btn-sm btn-danger user-program" data-program="{&#10;    a = 1&#10;} $">Program 5</div></td>
+								<td>Undeclared Identifier</td>
+							</tr>
+							<tr>
+								<td><div class="btn btn-sm btn-danger user-program" data-program="{&#10;    int a&#10;    a = 1&#10;    int a&#10;    a = 2&#10;} $">Program 6</div></td>
+								<td>Redeclared Identifier in Same Scope</td>
 							</tr>
 						</tbody>
 					</table>
