Add a warning log type

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 								<select id="log-filter-status">
 									<option value="-">Show All</option>
 									<option value="label-info">Info</option>
+									<option value="label-warning">Warning</option>
 									<option value="label-danger">Error</option>
 								</select>
 								<label for="log-personality">Log personality:</label>
