Fix an improper test program

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 								<td>Complex If statements</td>
 							</tr>
 							<tr>
-								<td><div class="btn btn-sm btn-info user-program" data-program="{&#10;	a=1+2+3+4+5&#10;	print(a)&#10;	print(7)&#10;	print(7+a)&#10;	print(&quot;&quot;)&#10;	print(&quot;aa&quot;)&#10;	print(&quot;inta&quot;)&#10;	print(1+2+3+4+5)&#10;	print(false)&#10;	print(true)&#10;} $">Program 5</div></td>
+								<td><div class="btn btn-sm btn-info user-program" data-program="{&#10;    int a&#10;    a = 1+2+3+4+5&#10;    print(a)&#10;    print(7)&#10;    print(7+a)&#10;    print(&quot;&quot;)&#10;    print(&quot;aa&quot;)&#10;    print(&quot;inta&quot;)&#10;    print(1+2+3+4+5)&#10;    print(false)&#10;    print(true)&#10;} $">Program 5</div></td>
 								<td>Print statements</td>
 							</tr>
 							<tr>
