Update project report and add test case

--- a/index.html
+++ b/index.html
@@ -167,6 +167,10 @@
 								<td><div class="btn btn-sm btn-danger user-program" data-program="{&#10;    int a&#10;    a = 1&#10;    int a&#10;    a = 2&#10;} $">Program 6</div></td>
 								<td>Redeclared Identifier in Same Scope</td>
 							</tr>
+							<tr>
+								<td><div class="btn btn-sm btn-danger user-program" data-program="{&#10;    print(a)&#10;} $">Program 7</div></td>
+								<td>Undeclared Identifier in Print Statement</td>
+							</tr>
 						</tbody>
 					</table>
 				</div>
