--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
 				</div>
 			</div>
 			<div class="row" id="test-programs">
-				<div class="col-md-6">
+				<div class="col-md-4">
 					<h5>Test (Pass) Programs</h5>
-					<table class="table program-table">
+					<table class="table program-table" id="pass-table">
 						<thead>
 							<tr>
 								<th>Program</th>
@@ -106,40 +106,12 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr>
-								<td><div class="btn btn-sm btn-info user-program" data-program="{&#10;    while false {&#10;        print(&quot;a&quot;)&#10;    }&#10;    &#10;    print(&quot;done&quot;)&#10;} $&#10;">Program 1</div></td>
-								<td>Non While</td>
-							</tr>
-							<tr>
-								<td><div class="btn btn-sm btn-info user-program" data-program="{&#10;    int a&#10;    a = 1&#10;    {&#10;        int a&#10;        a = 2&#10;        print(a)&#10;    }&#10;    &#10;    string b&#10;    b = &quot;alan&quot;&#10;    &#10;    if(a == 1) {&#10;        print(b)&#10;    }&#10;    &#10;    string c&#10;    c = &quot;james&quot;&#10;    b = &quot;blackstone&quot;&#10;    print(b)&#10;} $&#10;">Program 2</div></td>
-								<td>Everything 1</td>
-							</tr>
-							<tr>
-								<td><div class="btn btn-sm btn-info user-program" data-program="{&#10;    int a&#10;    int b&#10;    int c&#10;    a = 1&#10;    b = 1&#10;    c = 1&#10;    while(a == 1) {&#10;        print(b)&#10;        if(c == 2) {&#10;            a = 2&#10;        }&#10;        if(b == 2) {&#10;            b = 3&#10;            c = 2&#10;        }&#10;        if(b == 1) {&#10;            b = 2&#10;        }&#10;    }&#10;} $">Program 3</div></td>
-								<td>While/Print/If</td>
-							</tr>
-							<tr>
-								<td><div class="btn btn-sm btn-info user-program" data-program="{&#10;    int a&#10;    a = 6&#10;    if(a == 2 + 4) {&#10;        print(a)&#10;    }&#10;    if(5 + 4 == 7 + 2) {&#10;        print(a)&#10;    }&#10;} $">Program 4</div></td>
-								<td>Complex If statements</td>
-							</tr>
-							<tr>
-								<td><div class="btn btn-sm btn-info user-program" data-program="{&#10;    int a&#10;    a = 1+2+3+4+5&#10;    print(a)&#10;    print(7)&#10;    print(7+a)&#10;    print(&quot;&quot;)&#10;    print(&quot;aa&quot;)&#10;    print(&quot;inta&quot;)&#10;    print(1+2+3+4+5)&#10;    print(false)&#10;    print(true)&#10;} $">Program 5</div></td>
-								<td>Print statements</td>
-							</tr>
-							<tr>
-								<td><div class="btn btn-sm btn-info user-program" data-program="{&#10;    int a&#10;    a = 0&#10;    string z&#10;    z = &quot;bond&quot;&#10;    while (a != 9) {&#10;        if(a != 5) {&#10;            print(&quot;bond&quot;)&#10;        }&#10;        {&#10;            a = 1 + a&#10;            string b&#10;            b = &quot;james bond&quot;&#10;            print(b)&#10;        }&#10;    }&#10;    {}&#10;    boolean c&#10;    c = true&#10;    boolean d&#10;    d = (true == (true == false))&#10;    d = (a == c)&#10;    d = (1 == a)&#10;    d = (1 != 1)&#10;    d = (&quot;string&quot; == 1)&#10;    d = (a != &quot;string&quot;)&#10;    d = (&quot;string&quot; != &quot;string&quot;)&#10;    if (d == true) {&#10;        int c&#10;        c = 1 + d&#10;        if (c == 1) {&#10;            print(&quot;ugh&quot;)&#10;        }&#10;    }&#10;    while (&quot;string&quot; == a) {&#10;        while (1 == true) {&#10;            a = 1 + &quot;string&quot;&#10;        }&#10;    }&#10;} $">Program 6</div></td>
-								<td>Everything 2</td>
-							</tr>
-							<tr>
-								<td><div class="btn btn-sm btn-info user-program" data-program="{&#10;    int a&#10;} $">Program 7</div></td>
-								<td>Unused Identifier</td>
-							</tr>
 						</tbody>
 					</table>
 				</div>
-				<div class="col-md-6">
-					<h5>Test (Fail) Programs</h5>
-					<table class="table program-table">
+				<div class="col-md-4">
+					<h5>Test (Warning) Programs</h5>
+					<table class="table program-table" id="warning-table">
 						<thead>
 							<tr>
 								<th>Program</th>
@@ -147,34 +119,19 @@
 							</tr>
 						</thead>
 						<tbody>
+						</tbody>
+					</table>
+				</div>
+				<div class="col-md-4">
+					<h5>Test (Fail) Programs</h5>
+					<table class="table program-table" id="fail-table">
+						<thead>
 							<tr>
-								<td><div class="btn btn-sm btn-danger user-program" data-program="{&#10;    int a&#10;    a = &quot;bob&quot;&#10;} $">Program 1</div></td>
-								<td>Type Mismatch</td>
+								<th>Program</th>
+								<th>Description</th>
 							</tr>
-							<tr>
-								<td><div class="btn btn-sm btn-danger user-program" data-program="{&#10;    float pi&#10;    pi = 3.14&#10;} $">Program 2</div></td>
-								<td>Invalid Type</td>
-							</tr>
-							<tr>
-								<td><div class="btn btn-sm btn-danger user-program" data-program="{&#10;    while &quot;a&quot; {&#10;        print ( &quot;a&quot; )&#10;    }&#10;    &#10;    print ( &quot;done&quot; )&#10;} $&#10;">Program 3</div></td>
-								<td>Invalid Boolean Expression</td>
-							</tr>
-							<tr>
-								<td><div class="btn btn-sm btn-danger user-program" data-program="{&#10;    int a&#10;    a == 6&#10;} $">Program 4</div></td>
-								<td>Invalid Statement List</td>
-							</tr>
-							<tr>
-								<td><div class="btn btn-sm btn-danger user-program" data-program="{&#10;    a = 1&#10;} $">Program 5</div></td>
-								<td>Undeclared Identifier</td>
-							</tr>
-							<tr>
-								<td><div class="btn btn-sm btn-danger user-program" data-program="{&#10;    int a&#10;    a = 1&#10;    int a&#10;    a = 2&#10;} $">Program 6</div></td>
-								<td>Redeclared Identifier in Same Scope</td>
-							</tr>
-							<tr>
-								<td><div class="btn btn-sm btn-danger user-program" data-program="{&#10;    print(a)&#10;} $">Program 7</div></td>
-								<td>Undeclared Identifier in Print Statement</td>
-							</tr>
+						</thead>
+						<tbody>
 						</tbody>
 					</table>
 				</div>
@@ -193,4 +150,5 @@
 	<script type="text/javascript" src="scripts/runner.js"></script>
 	<script type="text/javascript" src="scripts/semantic_analyzer.js"></script>
 	<script type="text/javascript" src="scripts/tree_node.js"></script>
+	<script type="text/javascript" src="scripts/test_program.js"></script>
 </html>
