Add in base Code Generator class

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 									<option value="lex">Lexer</option>
 									<option value="parser">Parser</option>
 									<option value="semantic-analyzer">Semantic Analysis</option>
+									<option value="code-generator">Code Generator</option>
 								</select>
 								<label for="log-filter-status">Filter by status:</label>
 								<select id="log-filter-status">
@@ -151,4 +152,5 @@
 	<script type="text/javascript" src="scripts/semantic_analyzer.js"></script>
 	<script type="text/javascript" src="scripts/tree_node.js"></script>
 	<script type="text/javascript" src="scripts/test_program.js"></script>
+	<script type="text/javascript" src="scripts/code_generator.js"></script>
 </html>
