Include the new files in the index.html file so it actually works

--- a/index.html
+++ b/index.html
@@ -153,4 +153,7 @@
 	<script type="text/javascript" src="scripts/tree_node.js"></script>
 	<script type="text/javascript" src="scripts/test_program.js"></script>
 	<script type="text/javascript" src="scripts/code_generator.js"></script>
+	<script type="text/javascript" src="scripts/code_table.js"></script>
+	<script type="text/javascript" src="scripts/static_table.js"></script>
+	<script type="text/javascript" src="scripts/static_table_entry.js"></script>
 </html>
