Jump Table classes

--- a/index.html
+++ b/index.html
@@ -156,4 +156,6 @@
 	<script type="text/javascript" src="scripts/code_table.js"></script>
 	<script type="text/javascript" src="scripts/static_table.js"></script>
 	<script type="text/javascript" src="scripts/static_table_entry.js"></script>
+	<script type="text/javascript" src="scripts/jump_table.js"></script>
+	<script type="text/javascript" src="scripts/jump_table_entry.js"></script>
 </html>
